fix: Increase navigation icons adjustment to -8px when collapsed
- Changed margin-top from -4px to -8px
- Navigation icons now move up 8px total when sidebar is collapsed
- Better alignment compensation

--- a/src/components/layout/MainSidebar/MainSidebar.scss
+++ b/src/components/layout/MainSidebar/MainSidebar.scss
@@ -134,7 +134,7 @@
 
   // Ajustar posición de navegación cuando está colapsada
   &--collapsed &__nav {
-    margin-top: -4px;
+    margin-top: -8px;
   }
 
   &__secondary {
